# xai-grpc-client

./: .coderabbit.yaml  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check-proto-updates.yml  ci.yml  release.yml
examples/: custom_tls.rs  embeddings.rs  list_models.rs  multimodal.rs  simple_chat.rs  streaming_chat.rs  tokenize.rs  tool_calling.rs  tool_calling_with_results.rs
src/: api_key.rs  auth.rs  documents.rs  embedding.rs  error.rs  image.rs  lib.rs  mod.rs  models.rs  request.rs  response.rs  sample.rs  tokenize.rs  tools.rs
src/client/: config.rs  conversions.rs  mod.rs  operations.rs
