[package]
name = "xai-grpc-client"
version = "0.2.1"
edition = "2021"
authors = ["Thierry Bourrillon <thierry.bourrillon@fpinsight.com>"]
license = "MIT OR Apache-2.0"
description = "Feature-complete gRPC client for xAI's Grok API with streaming, tools, multimodal support"
repository = "https://github.com/fpinsight/xai-grpc-client"
homepage = "https://github.com/fpinsight/xai-grpc-client"
documentation = "https://docs.rs/xai-grpc-client"
keywords = ["xai", "grok", "grpc", "llm", "ai"]
categories = ["api-bindings", "asynchronous", "network-programming"]
readme = "README.md"
rust-version = "1.82.0"
include = [
    "src/**/*",
    "proto/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[workspace]
# This is a standalone crate, not part of the parent workspace

[dependencies]
# gRPC and protobuf
tonic = { version = "0.14", features = ["transport", "tls-webpki-roots"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1.17"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
secrecy = "0.10"

# TLS - optional dependency to control crypto provider selection
rustls = { version = "0.23", optional = true }

# Encoding
base64 = "0.22"

[features]
default = ["ring-crypto"]

# Feature to select the `ring` crypto provider (default)
ring-crypto = ["rustls/ring"]

# Feature to select the `aws-lc-rs` crypto provider
aws-lc-rs-crypto = ["rustls/aws-lc-rs"]

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"

[[example]]
name = "streaming_chat"
path = "examples/streaming_chat.rs"

[[example]]
name = "tool_calling"
path = "examples/tool_calling.rs"

[[example]]
name = "multimodal"
path = "examples/multimodal.rs"

[[example]]
name = "list_models"
path = "examples/list_models.rs"

[[example]]
name = "embeddings"
path = "examples/embeddings.rs"

[[example]]
name = "tokenize"
path = "examples/tokenize.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
