[package]
name = "xai-grpc-client"
version = "0.3.0"
edition = "2021"
authors = ["Thierry Bourrillon <thierry.bourrillon@fpinsight.com>"]
license = "MIT OR Apache-2.0"

description = "Feature-complete gRPC client for xAI's Grok API with streaming, tools, multimodal support"
repository = "https://github.com/fpinsight/xai-grpc-client"
homepage = "https://github.com/fpinsight/xai-grpc-client"
documentation = "https://docs.rs/xai-grpc-client"
keywords = ["xai", "grok", "grpc", "llm", "ai"]
categories = ["api-bindings", "asynchronous", "network-programming"]
readme = "README.md"
rust-version = "1.82.0"
include = [
    "src/**/*",
    "proto/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[workspace]
# This is a standalone crate, not part of the parent workspace

[dependencies]
# gRPC and protobuf
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1.17"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
secrecy = "0.10"

# Encoding
base64 = "0.22"

# URL parsing
url = "2.5"

[features]
# Default to webpki-roots (works in most environments including containers)
default = ["tls-webpki-roots"]

# TLS root certificate selection - choose ONE of these
# webpki-roots: Mozilla's root certificates (recommended for containers/distroless)
tls-webpki-roots = ["tonic/tls-webpki-roots"]

# native-roots: Use the system's native certificate store (recommended for development)
tls-native-roots = ["tonic/tls-native-roots"]

# Support for both root stores simultaneously (use if unsure)
tls-roots = ["tls-webpki-roots", "tls-native-roots"]

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"

[[example]]
name = "streaming_chat"
path = "examples/streaming_chat.rs"

[[example]]
name = "tool_calling"
path = "examples/tool_calling.rs"

[[example]]
name = "multimodal"
path = "examples/multimodal.rs"

[[example]]
name = "list_models"
path = "examples/list_models.rs"

[[example]]
name = "embeddings"
path = "examples/embeddings.rs"

[[example]]
name = "tokenize"
path = "examples/tokenize.rs"

[[example]]
name = "custom_tls"
path = "examples/custom_tls.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
